--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -50,6 +50,7 @@
     <!-- style CSS -->
     <link rel="stylesheet" href="~/admin/css/style.css" />
     <link rel="stylesheet" href="~/admin/css/colors/default.css" id="colorSkinCSS">
+    <link href="~/libs/jquery-treegrid/css/jquery.treegrid.css" rel="stylesheet" />
     @RenderSection("addcss", required: false);
 </head>
 <body class="crm_body_bg">
@@ -512,6 +513,7 @@
     <!-- custom js -->
     <script src="~/admin/js/dashboard_init.js"></script>
     <script src="~/admin/js/custom.js"></script>
+    <script src="~/libs/jquery-treegrid/js/jquery.treegrid.js"></script>
     @RenderSection("addjs", required: false);
 </body>
 
