--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Create.cshtml
@@ -4,56 +4,55 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>OneCategory</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ParentId" class="control-label"></label>
-                <select asp-for="ParentId" class ="form-control" asp-items="ViewBag.ParentId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreateByUserId" class="control-label"></label>
-                <input asp-for="CreateByUserId" class="form-control" />
-                <span asp-validation-for="CreateByUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreateData" class="control-label"></label>
-                <input asp-for="CreateData" class="form-control" />
-                <span asp-validation-for="CreateData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeleteByUserId" class="control-label"></label>
-                <input asp-for="DeleteByUserId" class="form-control" />
-                <span asp-validation-for="DeleteByUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeleteData" class="control-label"></label>
-                <input asp-for="DeleteData" class="form-control" />
-                <span asp-validation-for="DeleteData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+
+
+
+<h1 style="text-align:center">ProductColor Create</h1>
+
+
+
+<div class="col-6 offset-3">
+    <form method="post">
+
+
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Parent</span>
+            <input type="text" class="form-control" asp-for="ParentId" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Name</span>
+            <input type="text" class="form-control" asp-for="Name" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Description</span>
+            <input type="text" class="form-control" asp-for="Description" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">CreateData</span>
+            <input type="date" class="form-control" asp-for="CreateData" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">CreateByUserId</span>
+            <input type="text" class="form-control" asp-for="CreateByUserId" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">DeleteData</span>
+            <input type="date" class="form-control" asp-for="DeleteData" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">DeleteByUserId</span>
+            <input type="date" class="form-control" asp-for="DeleteByUserId" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        </div>
+
+
+        <button type="submit" class="btn btn-outline-success">
+            <i class="fas fa-plus"></i>
+
+            Creat
+        </button>
+        <a asp-action="index" class="btn btn-outline-info">Geriye qayit</a>
+
+
+    </form>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
