--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Edit.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 style="text-align:center">Category  Edit</h1>
 
 <h4>OneCategory</h4>
 <hr />
@@ -56,6 +56,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
 </div>
 
