--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Index.cshtml
@@ -4,68 +4,61 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 style="text-align:center">Category  Layout</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Parent)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreateByUserId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreateData)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DeleteByUserId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DeleteData)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Parent.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreateByUserId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreateData)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeleteByUserId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeleteData)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
+
+<a class="btn btn-outline-success" asp-action="Create">Create</a>
+
+<table class="table  tree">
+    @foreach (var item in Model)
+    {
+
+        @if (item.ParentId == null)
+        {
+
+            <tr class="treegrid-@item.Id">
+                <td style="color:red">@item.Name</td>
+                <td class="d-flex justify-content-end">
+
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+                </td>
+            </tr>
+        }
+        @if (item.Children != null)
+        {
+            @foreach (var item1 in item.Children)
+            {
+                <tr class="treegrid-@item1.Id treegrid-parent-@item1.ParentId">
+                    <td>@item1.Name</td>
+                    <td class="d-flex justify-content-end">
+
+                        <a class="btn btn-outline-warning" asp-action="edit" asp-route-id="@item1.Id">Edit</a>
+                        <a class="btn btn-outline-info" asp-action="details" asp-route-id="@item1.Id">details</a>
+                        <a class="btn btn-outline-danger" asp-action="delete" asp-route-id="@item1.Id">delete</a>
+                    </td>
+                </tr>
+            }
+        }
+
+
+
+    }
+
+
 </table>
+
+
+@section addjs{
+
+
+    <script type="text/javascript">
+        $('.tree').treegrid();
+    </script>
+}
+
+
+
+
