--- a/HomeWork-WebUI/Riode.WebUI/Views/Shop/Details.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Shop/Details.cshtml
@@ -13,7 +13,7 @@
                             @foreach (var item in Model.Images)
                             {
                                 <figure class="product-image">
-                                    <img src="~/uploads/images/product/@item.FileName"
+                                    <img src="~/uploads/images/@item.FileName"
                                          data-zoom-image="~/uploads/images/product/@item.FileName"
                                          alt="Women's Brown Leather Backpacks" width="800" height="900">
                                 </figure>
