--- a/HomeWork-WebUI/Riode.WebUI/Views/Shop/_ProdactContainer.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Shop/_ProdactContainer.cshtml
@@ -7,7 +7,7 @@
     <div class="product">
         <figure class="product-media">
             <a asp-action="details" asp-route-id="@item.Id">
-                <img src="~/uploads/images/product/@imagepath" alt="product" width="280" height="315">
+                <img src="~/uploads/images/@imagepath" alt="product" width="280" height="315">
             </a>
             <div class="product-label-group">
                 <label class="product-label label-new">new</label>
