--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -179,6 +179,26 @@
                     </div>
                 </a>
             </li>
+            <li class="">
+                <a asp-controller="Questions" asp-action="index" aria-expanded="false">
+                    <div class="nav_icon_small">
+                        <img src="~/uploads/images/menu-icon/7.svg" alt="">
+                    </div>
+                    <div class="nav_title">
+                        <span>Fak</span>
+                    </div>
+                </a>
+            </li>
+            <li class="">
+                <a asp-controller="Blogs" asp-action="index" aria-expanded="false">
+                    <div class="nav_icon_small">
+                        <img src="~/uploads/images/menu-icon/7.svg" alt="">
+                    </div>
+                    <div class="nav_title">
+                        <span>Blogs</span>
+                    </div>
+                </a>
+            </li>
 
 
 
