--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Edit.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Riode.WebUI.Model.Entity.Product
+﻿@model Riode.WebUI.Model.Entity.Blog
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,36 +6,31 @@
 
 <h1>Edit</h1>
 
-<h4>Product</h4>
+<h4>Blog</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sku" class="control-label"></label>
-                <input asp-for="Sku" class="form-control" />
-                <span asp-validation-for="Sku" class="text-danger"></span>
+                <label asp-for="Body" class="control-label"></label>
+                <input asp-for="Body" class="form-control" />
+                <span asp-validation-for="Body" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BrandsId" class="control-label"></label>
-                <select asp-for="BrandsId" class="form-control" asp-items="ViewBag.BrandsId"></select>
-                <span asp-validation-for="BrandsId" class="text-danger"></span>
+                <label asp-for="ImagePati" class="control-label"></label>
+                <input asp-for="ImagePati" class="form-control" />
+                <span asp-validation-for="ImagePati" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ShopDescription" class="control-label"></label>
-                <input asp-for="ShopDescription" class="form-control" />
-                <span asp-validation-for="ShopDescription" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="PublishedDate" class="control-label"></label>
+                <input asp-for="PublishedDate" class="form-control" />
+                <span asp-validation-for="PublishedDate" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -69,6 +64,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section addjs {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
