--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Products/Details.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Products/Details.cshtml
@@ -11,11 +11,6 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            <td>
-                <img width="70" height="70" src="~/uploads/images/@Model.Images.FirstOrDefault(i=>i.IsMain)?.FileName" />
-            </td>
-        </dt>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class="col-sm-10">
@@ -51,9 +46,44 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CreateData)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Images)
+        </dt>
+        <dt class="col-sm-2">
+            <img width="70" height="70" src="~/uploads/images/@Model.Images.FirstOrDefault().FileName" />
+
+        </dt>
+
+       
+
     </dl>
 </div>
 <div>
-    <a class="btn btn-sm btn-success" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
+    <a class="btn btn-sm btn-success" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
     <a class="btn btn-sm btn-dark" asp-action="Index">Back to List</a>
 </div>
+
+
+
+
+@section addcss{
+
+    <link href="~/libs/multiple-imager-js/css/imager.css" rel="stylesheet" />
+
+}
+
+@section addjs{
+
+    <script src="~/libs/multiple-imager-js/js/imager.js"></script>
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $('#viewer1').imgadd({
+            tnWidth: '120px',
+            tnHeight: '120px',
+            fontSize: '55px',
+            plusInnerHtml: '',
+            plusBtnClass: undefined
+        });
+    </script>
+}
