--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Create.cshtml
@@ -8,66 +8,90 @@
 
 <h4>Blog</h4>
 <hr />
-<form class="row" enctype="multipart/form-data" method="post">
-    <div class="col-md-4">
-        <div>
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Body" class="control-label"></label>
-                <input asp-for="Body" class="form-control" />
-                <span asp-validation-for="Body" class="text-danger"></span>
-            </div>
+<div class="white_card_body">
+    <div class="card-body">
+        <div class="form-row">
+            <form class="row" method="post">
+                <div class="col-md-12">
+                    <div>
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="Title" class="control-label"></label>
+                            <input asp-for="Title" class="form-control" />
+                            <span asp-validation-for="Title" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Body" class="control-label"></label>
+                            <textarea asp-for="Body" class="form-control"></textarea>
+                            <span asp-validation-for="Body" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-12">
+                            <label class="control-label">
+                                Şəkil
+                            </label>
+                            <label class="image-input" for="file">
+                                <input type="hidden" name="fileTemp" value=""> 
+                                <span>×</span>
+                            </label>
+                            <input name="file"
+                                   id="file"
+                                   type="file"
+                                   accept="image/x-png,image/gif,image/jpeg">
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="CreateData" class="control-label"></label>
+                            <input asp-for="CreateData" class="form-control" />
+                            <span asp-validation-for="CreateData" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="PublishedDate" class="control-label"></label>
+                            <input asp-for="PublishedDate" class="form-control" />
+                            <span asp-validation-for="PublishedDate" class="text-danger"></span>
+                        </div>
 
-            <div class="form-group">
-                <label asp-for="CreateData" class="control-label"></label>
-                <input asp-for="CreateData" class="form-control" />
-                <span asp-validation-for="CreateData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PublishedDate" class="control-label"></label>
-                <input asp-for="PublishedDate" class="form-control" />
-                <span asp-validation-for="PublishedDate" class="text-danger"></span>
-            </div>
+                        <div class="form-group">
+                            <input type="submit" value="Create" class="btn btn-primary" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div style="width: 600px;" class="imager-container" id="viewer1" name="images">
 
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
-    <div class="col-md-8">
-        <div style="width: 600px;" class="imager-container" id="viewer1" name="images">
-
-        </div>
-    </div>
-</form>
-
+</div>
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
 
 
-@section addcss{
-
-    <link href="~/libs/multiple-imager-js/css/imager.css" rel="stylesheet" />
-
-}
 
 @section addjs{
 
-    <script src="~/libs/multiple-imager-js/js/imager.js"></script>
+    <script src="~/libs/jquery-image-input/JavaScript.js"></script>
+
+    <script src="~/libs/ckeditor5/ckeditor.js"></script>
 
     <script>
-        $('#viewer1').imgadd({
-            tnWidth: '120px',
-            tnHeight: '120px',
-            fontSize: '55px',
-            plusInnerHtml: '',
-            plusBtnClass: undefined
+
+        $(document).ready(function () {
+
+            ClassicEditor
+                .create(document.querySelector('#Body'))
+                .catch(error => {
+                    console.error(error);
+                });
+
         });
+
     </script>
+}
+
+@section addcss{ 
+
+    <link href="~/libs/jquery-image-input/StyleSheet.css" rel="stylesheet" />
+
 }
