--- a/HomeWork-WebUI/Riode.WebUI/Views/Blog/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Blog/Index.cshtml
@@ -32,7 +32,7 @@
                 <div class="grid-item col-sm-6 col-lg-4 lifestyle shopping winter-sale">
                     <article class="post post-mask gradient">
                         <figure class="post-media overlay-zoom">
-                            <a href="post-single.html">
+                            <a asp-action="details" asp-route-id="@item.Id">
                                 <img src="~/uploads/images/blog/mask/@item.ImagePati" width="380" height="280" alt="post" />
                             </a>
                         </figure>
@@ -46,7 +46,7 @@
                                     @item.Title
                                 </a>
                             </h4>
-                            <a href="post-single.html" class="btn btn-link btn-underline btn-white">
+                            <a  asp-action="details" asp-route-id="@item.Id" class="btn btn-link btn-underline btn-white">
                                 Read more<i class="d-icon-arrow-right"></i>
                             </a>
                         </div>
