--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Create.cshtml
@@ -17,6 +17,10 @@
             <input type="text" class="form-control" asp-for="Name" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Abbr</span>
+            <input type="text" class="form-control" asp-for="Abbr" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">description</span>
             <input type="text" class="form-control" asp-for="description" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
