--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Delete.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Delete.cshtml
@@ -13,6 +13,10 @@
     <input type="text" disabled class="form-control" aria-label="Sizing example input" value="@Model.Name" aria-describedby="inputGroup-sizing-default">
 </div>
 <div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Abbr</span>
+    <input type="text" disabled class="form-control" aria-label="Sizing example input" value="@Model.Abbr" aria-describedby="inputGroup-sizing-default">
+</div>
+<div class="input-group mb-3">
     <span class="input-group-text" id="inputGroup-sizing-default">CreateData</span>
     <input type="text" disabled class="form-control" aria-label="Sizing example input" value="@Model.CreateData" aria-describedby="inputGroup-sizing-default">
 </div>
