--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Products/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Products/Index.cshtml
@@ -57,9 +57,9 @@
                       @item.CreateData
                     </td>
                     <td>
-                        <a class="btn btn-sm btn-info" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <a class="btn btn-sm btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                         <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                        <a class="btn btn-sm btn-danger" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                        <a class="btn btn-sm btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
                     </td>
                 </tr>
                 }
