--- a/HomeWork-WebUI/Riode.WebUI/Views/Shop/Details.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Shop/Details.cshtml
@@ -14,7 +14,7 @@
                             {
                                 <figure class="product-image">
                                     <img src="~/uploads/images/@item.FileName"
-                                         data-zoom-image="~/uploads/images/product/@item.FileName"
+                                         data-zoom-image="~/uploads/images/@item.FileName"
                                          alt="Women's Brown Leather Backpacks" width="800" height="900">
                                 </figure>
                             }
@@ -24,7 +24,7 @@
                                 @foreach (var item in Model.Images)
                                 {
                                     <div class="product-thumb ">
-                                        <img src="~/uploads/images/product/@item.FileName" alt="product thumbnail"
+                                        <img src="~/uploads/images/@item.FileName" alt="product thumbnail"
                                              width="109" height="122">
                                     </div>
                                 }
