--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Create.cshtml
@@ -11,7 +11,7 @@
 <div class="white_card_body">
     <div class="card-body">
         <div class="form-row">
-            <form class="row" method="post">
+            <form class="row" method="post" enctype="multipart/form-data">
                 <div class="col-md-12">
                     <div>
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -64,7 +64,7 @@
     </div>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
 </div>
 
 
