--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Edit.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Edit.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-12 card-body">
         <div class="form-row">
-            <form asp-action="Edit">
+            <form method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group col-12">
                     <label asp-for="Title" class="control-label"></label>
@@ -19,15 +19,26 @@
                     <span asp-validation-for="Title" class="text-danger"></span>
                 </div>
                 <div class="form-group col-12">
+                    <label class="control-label">
+                        Şəkil
+                    </label>
+                    <label class="image-input"
+                           data-imgurl="/uploads/images/blog/mask/@Model.ImagePati"
+                           for="file">
+                        <input type="hidden" name="fileTemp" value="@Model.ImagePati">
+                        <span>×</span>
+                    </label>
+                    <input name="file"
+                           id="file"
+                           type="file"
+                           accept="image/x-png,image/gif,image/jpeg">
+                </div>
+                <div class="form-group col-12">
                     <label asp-for="Body" class="control-label"></label>
                     <textarea asp-for="Body" class="form-control"></textarea>
                     <span asp-validation-for="Body" class="text-danger"></span>
                 </div>
-                <div class="form-group col-12">
-                    <label asp-for="ImagePati" class="control-label"></label>
-                    <input asp-for="ImagePati" class="form-control" />
-                    <span asp-validation-for="ImagePati" class="text-danger"></span>
-                </div>
+
                 <div class="form-group col-12">
                     <label asp-for="PublishedDate" class="control-label"></label>
                     <input asp-for="PublishedDate" class="form-control" />
@@ -43,28 +54,37 @@
                 </div>
             </form>
         </div>
-     
+
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
-</div>                      
+    <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
+</div>
 
 @section addjs{
 
     <script src="~/libs/ckeditor5/ckeditor.js"></script>
+    <script src="~/libs/jquery-image-input/JavaScript.js"></script>
 
-<script>
-         
-    $(document).ready(function () {
 
-        ClassicEditor
-            .create(document.querySelector('#Body'))
-            .catch(error => {
-                console.error(error);
-            });
-    
-    })
-</script>
+    <script>
+
+        $(document).ready(function () {
+
+            ClassicEditor
+                .create(document.querySelector('#Body'))
+                .catch(error => {
+                    console.error(error);
+                });
+
+        })
+    </script>
+}
+
+
+@section addcss{
+
+    <link href="~/libs/jquery-image-input/StyleSheet.css" rel="stylesheet" />
+
 }
