--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Details.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Details.cshtml
@@ -14,6 +14,10 @@
     <input type="text" disabled class="form-control" aria-label="Sizing example input" value="@Model.Name" aria-describedby="inputGroup-sizing-default">
 </div>
 <div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Abbr</span>
+    <input type="text" disabled class="form-control" aria-label="Sizing example input" value="@Model.Abbr" aria-describedby="inputGroup-sizing-default">
+</div>
+<div class="input-group mb-3">
     <span class="input-group-text" id="inputGroup-sizing-default">CreateData</span>
     <input type="text" disabled class="form-control" aria-label="Sizing example input" value="@Model.CreateData" aria-describedby="inputGroup-sizing-default">
 </div>
@@ -36,7 +40,7 @@
 
 
 
-<a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+<a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
 <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
 
 
