--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Edit.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Edit.cshtml
@@ -18,6 +18,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Abbr" class="control-label"></label>
+                <input asp-for="Abbr" class="form-control" />
+                <span asp-validation-for="Abbr" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="description" class="control-label"></label>
                 <input asp-for="description" class="form-control" />
                 <span asp-validation-for="description" class="text-danger"></span>
@@ -51,6 +56,6 @@
 </div>
 
 <div>
-    <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
+    <a class="btn btn-inverse" asp-action="Index">Back to List</a>
 </div>
 
