--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Index.cshtml
@@ -4,40 +4,59 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Brands Layout</h1>
-
-<table class="table table-striped" border="1">
-    <thead>
-        <tr>
-            <th>Nom</th>
-            <th scope="col">Name</th>
-            <th scope="col">CreateData</th>
-            <th>
-                <a class="btn btn-success" asp-action="Create">Create New</a>
-
-                <a class="btn btn-warning">Brands Count=@ViewBag.Count</a>
+<div style="display:flex">
+    <h1>Product Size</h1>
 
 
-            </th>
-
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+</div>
+<a style="margin-left:15px" class="btn btn-warning">Brands Count:@ViewBag.Count</a>
+<div class="col-6">
+    <table class="table table-striped" border="1">
+        <thead>
             <tr>
-                <th>@item.Id</th>
-                <td>@item.Name</td>
-                <td> @item.CreateData</td>
-                <td>
-                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <th>Abbr</th>
+                <th scope="col">Name</th>
+                <th scope="col">CreateData</th>
+                <th>
+                    <a class="btn btn-success" asp-action="Create">
+                        <i class="fas fa-plus"></i>
+                        Create New
+                    </a>
 
 
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
+
+
+                </th>
 
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <th>@item.Abbr</th>
+                    <td>@item.Name</td>
+                    <td> @item.CreateData</td>
+                    <td>
+                        <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id">
+                        <i class="fas fa-pencil-alt"></i>
+                        Edit</a>
+                        <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id">
+                            <i class="fas fa-eye"></i>
+
+                            Details
+                        </a>
+
+
+                        <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">
+                            <i class="fas fa-trash-alt"></i>
+
+                            Delete
+                        </a>
+                    </td>
+
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
