--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Create.cshtml
@@ -69,6 +69,7 @@
 
 
 
+
 @section addjs{
 
     <script src="~/libs/jquery-image-input/JavaScript.js"></script>
@@ -77,6 +78,7 @@
 
     <script>
 
+        // bir sekli getirmek ucun yazilir bu proses js ve css asagdaki kimidir:
         $(document).ready(function () {
 
             ClassicEditor
@@ -90,8 +92,10 @@
     </script>
 }
 
+
 @section addcss{ 
 
-    <link href="~/libs/jquery-image-input/StyleSheet.css" rel="stylesheet" />
+    
+    <link href="~/libs/jquery-image-input/StyleSheet.css" rel="stylesheet" /> 
 
 }
