--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Products/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Products/Create.cshtml
@@ -81,6 +81,8 @@
 
 @section addjs{
 
+
+
     <script src="~/libs/multiple-imager-js/js/imager.js"></script>
 
     <script>
@@ -90,6 +92,7 @@
             fontSize: '55px',
             plusInnerHtml: '',
             plusBtnClass: undefined
+            // cox sekil getirmek ucun yazilmis js ve css aagdakdir;
         });
     </script>
 }
