--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Products/Edit.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Products/Edit.cshtml
@@ -1,74 +1,75 @@
 ﻿@model Riode.WebUI.Model.Entity.Product
 
-@{
-    ViewData["Title"] = "Edit";
-}
+
 
 <h1>Edit</h1>
 
 <h4>Product</h4>
 <hr />
-<div class="row">
+<form class="row" enctype="multipart/form-data" method="post">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <div>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Sku" class="control-label"></label>
-                <input asp-for="Sku" class="form-control" />
-                <span asp-validation-for="Sku" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="BrandsId" class="control-label"></label>
-                <select asp-for="BrandsId" class="form-control" asp-items="ViewBag.BrandsId"></select>
-                <span asp-validation-for="BrandsId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ShopDescription" class="control-label"></label>
-                <input asp-for="ShopDescription" class="form-control" />
-                <span asp-validation-for="ShopDescription" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CreateByUserId" class="control-label"></label>
-                <input asp-for="CreateByUserId" class="form-control" />
-                <span asp-validation-for="CreateByUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreateData" class="control-label"></label>
-                <input asp-for="CreateData" class="form-control" />
-                <span asp-validation-for="CreateData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeleteByUserId" class="control-label"></label>
-                <input asp-for="DeleteByUserId" class="form-control" />
-                <span asp-validation-for="DeleteByUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeleteData" class="control-label"></label>
-                <input asp-for="DeleteData" class="form-control" />
-                <span asp-validation-for="DeleteData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
 
+            <div class="form-group"
+                <label asp-for="BrandsId" class="control-label"></label>
+                <input asp-for="BrandsId" class="form-control" />
+                <span asp-validation-for="BrandsId" class="text-danger"></span>
+            </div>
+
+
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <div style="width: 600px;" class="imager-container" id="viewer1" name="files">
+
+            @foreach (var item in Model.Images)
+            {
+                <label thumb-url='/uploads/images/@item.FileName'
+                       image-id="@item.Id" checked="@item.IsMain.ToString().ToLower()"></label>
+
+            }
+        </div>
+    </div>
+</form>
 <div>
     <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
 </div>
 
 @section addjs {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+
+    <script src="~/libs/multiple-imager-js/js/imager.js"></script>
+
+    <script>
+        $('#viewer1').imgadd({
+            tnWidth: '120px',
+            tnHeight: '120px',
+            fontSize: '55px',
+            plusInnerHtml: '',
+            plusBtnClass: undefined
+        });
+    </script>
+
+}
+
+
+@section addcss{
+    <link href="~/libs/multiple-imager-js/css/imager.css" rel="stylesheet" />
+
 }
