--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,8 +1,7 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @using Riode.WebUI.Model.Entity
-
 @using Riode.WebUI.Appcode
-
-
 @using Riode.WebUI.Model.Entity.ViewModels
+
+@using  Riode.WebUI.Appcode.Application.BrandsModelu
