--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Brands/Edit.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Brands/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Riode.WebUI.Model.Entity.Brands
+﻿@model BrandEditCommand
 
 @{
     ViewData["Title"] = "Edit";
@@ -16,31 +16,18 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="description" class="control-label"></label>
-                <input asp-for="description" class="form-control" />
-                <span asp-validation-for="description" class="text-danger"></span>
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>
+
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CreateByUserId" class="control-label"></label>
-                <input asp-for="CreateByUserId" class="form-control" />
-                <span asp-validation-for="CreateByUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreateData" class="control-label"></label>
-                <input asp-for="CreateData" class="form-control" />
-                <span asp-validation-for="CreateData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeleteByUserId" class="control-label"></label>
-                <input asp-for="DeleteByUserId" class="form-control" />
-                <span asp-validation-for="DeleteByUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeleteData" class="control-label"></label>
-                <input asp-for="DeleteData" class="form-control" />
-                <span asp-validation-for="DeleteData" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
