--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Brands/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Brands/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Riode.WebUI.Model.Entity.Brands>
+﻿@model PagedViewModel<Brands>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,37 +7,39 @@
 
 <h1>Brands Layout</h1>
 
+<div >
+    @Model.GetPagenation(Url, "index", "Admin")
+</div>
+
 <table class="table table-striped" border="1">
     <thead>
         <tr>
-            <th>Nom</th>
             <th scope="col">Name</th>
-            <th scope="col">CreateData</th>
-            <th><a class="btn btn-success" asp-action="Create">Create New</a>
+            <th>
+                <a class="btn btn-success" asp-action="Create">Create New</a>
 
-                <a class="btn btn-warning">Brands Count=@ViewBag.Count</a>
-                 
-            
+                @*<a class="btn btn-warning">Brands Count=@ViewBag.Count</a>*@
+
+
             </th>
 
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Items)
         {
-        <tr>
-            <th>@item.Id</th>
-            <td>@item.Name</td>
-            <td> @item.CreateData</td>
-            <td>
-                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
+            <tr>
+                <td>@item.Name</td>
+                <td>
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
 
 
-                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
 
-        </tr>
+            </tr>
         }
     </tbody>
 </table>
+
